# interact_videoqa

./: ReadMe.md
Video_Annotation/: .gitignore  ReadMe.md  devbox.json  main.py  pyproject.toml  video_annotation_Tool.py
Video_Annotation/Modules/: AsyncVideoAnnotator.py  CircleSelect.py  QuestionStas.py  QuestionStats.py
Video_Annotation/UserGuide/: BlurTrack.md  Contribution.md  ExportChat.md  ManualAnnotation.md  QuestionStats.md  VideoAnalysis.md  VideoSplit.md
interAct VideoQA/: .gitignore  ReadMe.md  auth.py  main.py  requirements.txt
interAct VideoQA/InterVL2/scripts/: inference.py  train_lora.py
interAct VideoQA/InterVL3/: main.py
interAct VideoQA/InterVL3/scripts/: config.py  dataset.py  evaluate.py  fine_tune.sh  inference.py  model_setup.py  prepare_data.py  train_lora.py
interAct VideoQA/Llava-Next-Video/: main.py  requirements.txt
interAct VideoQA/Llava-Next-Video/scripts/: config.py  dataset.py  evaluate.py  inference.py  model_setup.py  save_model.py  train.py
interAct VideoQA/Qwen-VL2-7B-hf/: fix_paths.py  main.py
interAct VideoQA/Qwen-VL2-7B-hf/scripts/: config.py  dataset.py  evaluate.py  inference.py  inference_single_video.py  model_setup.py  prepare_data.py  train.py  train_lora_vision.sh  utils.py
interAct VideoQA/VideoLlama2/: main.py
interAct VideoQA/VideoLlama2/scripts/: config.py  dataset.py  inference.py  model.py  train.py
interAct VideoQA/VideoLlama3/: main.py
interAct VideoQA/VideoLlama3/scripts/: config.py  dataset.py  evaluate.py  inference.py  model_setup.py  train.py  utils.py
(+3 files in other folders)
