[project]
name = "video-annotation"
version = "0.1.0"
description = "A video annotation tool with a Tkinter GUI"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# dependencies: no need to add 'tkinter', but you can add other packages here
dependencies = [
 "numpy",
 "opencv-python==4.12.0.88",
 "pillow",
"pandas",
"ultralytics",
"ttkbootstrap"
]

[tool.setuptools]
packages = ["video_annotation"]

[tool.devbox.packages]
# For devbox, you can ensure 'python3-tk' is installed (for Ubuntu systems)
system = ["python3-tk"]
